[metadata]
name = python-kongmingclient
summary = Python client library for OpenStack Mogan project.
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    kongmingclient

[entry_points]
openstack.cli.extension =
    resource_pin = kongmingclient.osc.plugin

openstack.resource_pin.v1 =
    resourcepin_instance_cpu_mapping_create = kongmingclient.osc.v1.instance_cpu_mapping:CreateInstanceCPUMappings
    resourcepin_instance_cpu_mapping_delete = kongmingclient.osc.v1.instance_cpu_mapping:DeleteInstanceCPUMappings
    resourcepin_instance_cpu_mapping_list = kongmingclient.osc.v1.instance_cpu_mapping:ListInstanceCPUMappings

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kongmingclient/locale
domain = kongmingclient

[update_catalog]
domain = kongmingclient
output_dir = kongmingclient/locale
input_file = kongmingclient/locale/kongmingclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kongmingclient/locale/kongmingclient.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[wheel]
universal = 1
